namespace FakePhysics.ECS.Dynamics
{
	public interface IFakeConstrainedSubSolver
	{
		void SolveConstraints(float deltaTime);
	}
}
